# workflows

./: .gitignore  README.md
access/cluster/: README.md
access/github/: README.md
best-practices/cluster/: README.md
best-practices/collaboration/: README.md
best-practices/cpp/: README.md
best-practices/cpp/brahma/: .gitignore  README.md  example.yaml  run_tests  setup.py
best-practices/cpp/brahma/bash/: brahma-aliases.bash  brahma-completion.bash
best-practices/cpp/brahma/brahma/: BrahmaWorkspacePaths.py  BrahmaWorkspaceSettings.py  CatkinToolsOptions.py  CatkinWorkspace.py  brahma_clean.py  brahma_config.py  brahma_create.py  brahma_info.py  brahma_init.py  brahma_update.py  git_helpers.py  log.py  main.py  summary.py  utils.py
best-practices/cpp/brahma/brahma/ide/: CMakeLists.txt.em  Project.xml  clion.py  clion_macros.cmake  misc.xml  name.em
best-practices/cpp/brahma/docs/source/: brahma.BrahmaWorkspacePaths.rst  brahma.BrahmaWorkspaceSettings.rst  brahma.CatkinToolsOptions.rst  brahma.CatkinWorkspace.rst  brahma.brahma_clean.rst  (+15 more)
best-practices/cpp/brahma/test/: conftest.py  test_brahma_create.py  test_brahma_update.py
best-practices/cpp/clion_template_project/: init_clion.py
best-practices/cpp/clion_template_project/clion_project_template/: CMakeLists.txt  ProjectHelper.cmake  README.md
best-practices/cpp/code_coverage/: CMakeLists.txt  README.md  package.xml
best-practices/cpp/code_coverage/cmake/: cmake_code_coverage.cmake
best-practices/cpp/code_coverage/scripts/: sum_coverage.py
best-practices/formatting/: .clang-format  README.md
best-practices/python/: README.md
best-practices/python/cmake_python_coverage/: CMakeLists.txt  README.md  package.xml  setup.py
best-practices/python/cmake_python_coverage/cmake/: add_pytests.cmake  cmake_python_coverage.cmake
best-practices/python/cmake_python_coverage/scripts/: runner
best-practices/python/cmake_python_coverage/src/cmake_python_coverage/: __init__.py
best-practices/python/template_project_name/: .flake8  .gitignore  LICENSE  README.md  setup.py
best-practices/python/template_project_name/scripts/: benchmark_torch_dataset.py  optuna.py  tmp.py  train.py
best-practices/python/template_project_name/template_project_name/: __init__.py
workflows/egpu/: README.md
workflows/python-cluster/: README.md
workflows/singularity-cluster/: README.md
(+22 files in other folders)
