<?xml version="1.0"?>
<package format="2">

  <name>cmake_python_coverage</name>
  <version>0.1.0</version>
  <description>CMake helpers for python coverage.</description>
  <license>Proprietary</license>

  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>python3-coverage</depend>
  <depend>python3-pytest</depend>
  <depend>rospy</depend>
  <depend>rostest</depend>

</package>
